CreCreated profile for Terranie

--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student name">
+                  <a href="students/terranie-sims.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/terranie-index.jpeg" class="attachment-blog-thumb wp-post-image" alt="student name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/terranie-sims.html">Terranie Sims</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">“Follow the need and you will never lack for a purpose.” - Marian Wright Edleman</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Originally from Orlando, Florida, I am a former teacher and pediatric therapist who turned to coding to transition to ed tech and social entrepreneurship. I love reading, writing, and traveling with my husband!</p>
                 </div>
                 <div class="clear"></div>
               </li>
