--- a/students/terranie-sims.html
+++ b/students/terranie-sims.html
@@ -242,10 +242,8 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      <a>Buenos Aires</a><br>
-                      <a>Barcelona</a><br>
-                      <a>Minneapolis</a><br>
-                      <a>New York</a><br>
+                      <a>Washington, D.C.</a><br>
+                      <a>San Jose, Costa Rica</a><br>
                     </p>
                   </div>
                 </div>
