--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Luis Penaloza</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">"You will face many defeats in life, but never let yourself be defeated."</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Photography enthusiast, nature lover, and a very outgoing person! I love to play first person shooter games and i enjoy spending time with my huskie pups!</p>
                 </div>
                 <div class="clear"></div>
               </li>
